--- a/DriveDetector/DriveDetector.csproj
+++ b/DriveDetector/DriveDetector.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DriveDetector.cs" />
+    <Compile Include="Exceptions\UndefinedEventTypeException.cs" />
     <Compile Include="Models\Enums\EventType.cs" />
     <Compile Include="Models\VolumeChangeEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
